0.6
-----------------

- fix long description, thanks Michael Foord

0.5
-----------------

- initial release 