@@ -259,6 +259,10 @@ class Session:
             if isinstance(arg, py.path.local):
                 arg = cwd.bestrelpath(arg)
             newargs.append(arg)
+        
+
+        if env is None:
+            env = os.environ.copy()
            
         opts = {'env': env} 
         args = [str(x) for x in args]
